--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
+    <h1>My Game Will Go Here</h1>
     <script src="sketch.js"></script>
   </body>
 </html>
